--- a/opal-confirm-conversion-service/pom.xml
+++ b/opal-confirm-conversion-service/pom.xml
@@ -58,6 +58,17 @@
         </dependency>
         <dependency>
             <groupId>org.dice-research.opal</groupId>
+            <artifactId>metadata-refinement</artifactId>
+            <version>[1,2)</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.dice-research.opal</groupId>
             <artifactId>common</artifactId>
             <version>[1,2)</version>
         </dependency>
