--- a/elasticsearch-writer/pom.xml
+++ b/elasticsearch-writer/pom.xml
@@ -63,7 +63,7 @@
         <!-- https://mvnrepository.com/artifact/org.elasticsearch/elasticsearch-core -->
         <dependency>
             <groupId>org.elasticsearch</groupId>
-            <artifactId>elasticsearch-core</artifactId>
+            <artifactId>elasticsearch</artifactId>
             <version>7.3.2</version>
         </dependency>
 
@@ -85,7 +85,22 @@
             <version>1.1.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.4.0</version>
+            <scope>test</scope>
+        </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
     </dependencies>
 
     <properties>
